crates/toml/tests/snapshots/invalid/integer/invalid-hex-03.stderr
TOML parse error at line 1, column 7
  |
1 | a = 0x-1
  |       ^
unexpected sign, expected nothing
